Encode url string in InternetData.java