@@ -3,21 +3,33 @@ package muzi.sdslabs.co.in;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.URI;
+import java.net.URL;
 
 import org.apache.http.HttpResponse;
 import org.apache.http.client.HttpClient;
 import org.apache.http.client.methods.HttpGet;
 import org.apache.http.impl.client.DefaultHttpClient;
 
+import android.util.Log;
+
 public class InternetData {
 
-	public String getInternetData(String url) throws Exception {
+	public String getInternetData(String url_input) throws Exception {
 		BufferedReader in = null;
 		String data = null;
 		try {
 			HttpClient client = new DefaultHttpClient();
-			URI website = new URI(url);
-					//"https://api.twitter.com/1/users/lookup.json?screen_name=09mangla&include_entities=true");
+
+			URL url = new URL(url_input);
+			URI website = new URI(url.getProtocol(), url.getUserInfo(),
+					url.getHost(), url.getPort(), url.getPath(),
+					url.getQuery(), url.getRef());
+			// url = uri.toURL();
+
+			Log.i("Internet Data", "URL:  " + website.toString());
+
+			// URI website = new URI(url);
+			// "https://api.twitter.com/1/users/lookup.json?screen_name=09mangla&include_entities=true");
 			HttpGet request = new HttpGet();
 			request.setURI(website);
 			HttpResponse response = client.execute(request);
@@ -31,7 +43,7 @@ public class InternetData {
 			}
 			in.close();
 			data = sb.toString();
-			//Log.i("RETURNED", data);
+			// Log.i("RETURNED", data);
 			return data;
 		} finally {
 			if (in != null) {
@@ -44,7 +56,5 @@ public class InternetData {
 			}
 		}
 	}
-	
-	
 
 }
